# GeoConnect

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
assets/: main.css  regions.rs  styles.css  tailwind.css
src/: MoreResearch.md  Research.md  chubu.rs  chugoku.rs  flowchart.rs  hokkaido.rs  kansai.rs  kanto.rs  kyushu.rs  main.rs  map.rs  place.rs  place_nav.rs  regions.rs  shikoku.rs  tohoku.rs
