[package]
name = "geoconnect"
version = "0.1.0"
authors = ["logan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
dotenvy = "0.15.7"
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio", "tls-native-tls"] }
tokio = { version = "1.52.3", features = ["full"] }



[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
